# uTag

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ThemesData.txt  aptLIst.txt  build.sh
3dparty/: CMakeLists.txt
3dparty/taglib/taglib/: fileref.h
app/: CMakeLists.txt  main.cpp
app/src/: AudioReader.cpp  AudioReader.h  CMakeLists.txt  LiveImage.cpp  LiveImage.h  appcore.cpp  appcore.h
app/src/qml/: FileEditor.qml  FileEditorLabel.qml  FileEditorText.qml  FoldersList.qml  MainPage.qml  MainSortButton.qml  MainSortPopup.qml  MusicsList.qml  SettingsColorPicker.qml.autosave  SettingsColorPickerBg.qml.autosave  SettingsDarkPickerBg.qml  SettingsLightPickerBg.qml  SettingsPage.qml  SettingsText.qml  SettingsThemeColor.qml  main.qml
